@@ -55,6 +55,7 @@ class ArtsEngine : public Engine::Base
 
         bool                                     canDecode( const KURL &url ) const;
         uint                                     position() const;
+        uint                                     length() const;
         Engine::State                            state() const;
         const Engine::Scope&                     scope();
 
