@@ -4,6 +4,8 @@ amaroK ChangeLog
 
 
 VERSION 1.2.1:
+  FIX: amaroK can now determine the correct track-length even for formats
+       unknown to TagLib. Makes it possible to seek e.g. in m4a tracks.
   ADD: Can now pick from multiple Musicbrainz results. Patch from
        Jonathan Halcrow <gte899j@prism.gatech.edu>. (BR 89701)
   ADD: May now set a custom cover on multiple albums in the Cover-Manager.
